# discoverage

./: .kateproject  CMakeLists.txt  app.qrc  bullo.cpp  bullo.h  cell.cpp  cell.h  config.cpp  config.h  discoveragehandler.cpp  discoveragehandler.h  discoveragewidget.ui  gridmap.cpp  gridmap.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mindisthandler.cpp  mindisthandler.h  newscenedialog.ui  robot.cpp  robot.h  robotlistview.cpp  robotlistview.h  robotmanager.cpp  robotmanager.h  robotwidget.cpp  robotwidget.h  robotwidget.ui  scene.cpp  scene.h  statistics.cpp  statistics.h  tikzexport.cpp  tikzexport.h  toolhandler.cpp  toolhandler.h  toolwidget.ui
handler/: bullo.cpp  bullo.h  discoveragefrontierwidget.ui  discoveragehandler.cpp  discoveragehandler.h  maxareahandler.cpp  maxareahandler.h  mindisthandler.cpp  mindisthandler.h  randomhandler.cpp  randomhandler.h  ruffinshandler.cpp  ruffinshandler.h  toolhandler.cpp  toolhandler.h
icons/: .directory
robot/: integratordynamics.cpp  integratordynamics.h  integratordynamicsconfigwidget.cpp  integratordynamicsconfigwidget.h  integratordynamicsconfigwidget.ui  robot.cpp  robot.h  robotconfigwidget.cpp  robotconfigwidget.h  robotlistview.cpp  robotlistview.h  robotmanager.cpp  robotmanager.h  robotstats.cpp  robotstats.h  robotwidget.cpp  robotwidget.ui  unicycle.cpp  unicycle.h  unicycleconfigwidget.cpp  unicycleconfigwidget.h  unicycleconfigwidget.ui
save/: 15randomblocks1.scene  15randomblocks2.scene  15randomblocks3.scene  GT.scene  labyrinth-1.scene  labyrinth-2.scene  leere-map.scene  tischsesselsitzsack.scene
stats/: RobotStats.cpp  RobotStats.h
